--- a/systemd/front_door_rfid_reader.service
+++ b/systemd/front_door_rfid_reader.service
@@ -10,7 +10,7 @@ LogNamespace=keep
 WorkingDirectory=/home/marcidy/100101SecBot
 
 Environment="QUEERIOUSLABS_ENV=PROD"
-ExecStart=/home/marcidy/100101SecBot/rfid_reader.py
+ExecStart=/home/marcidy/venv/bin/python3 /home/marcidy/100101SecBot/rfid_reader.py
 Restart=Always
 RestartSec=1s
 
