making services dependend and driven by latch service

--- a/systemd/front_door_authorizer.service
+++ b/systemd/front_door_authorizer.service
@@ -1,6 +1,8 @@
 [Unit]
-Description=RFID Authorizor for Front Door Latch Access
-After=network.target
+Description=RFID Authorizer for Front Door Latch Access
+After=front_door_latch.service
+Requires=front_door_latch.service
+PartOf=front_door_latch.service
 
 [Service]
 Type=simple
