Adding to README, updating systemd units to bind to front_door_latch

--- a/systemd/front_door_authorizer.service
+++ b/systemd/front_door_authorizer.service
@@ -3,6 +3,7 @@ Description=RFID Authorizer for Front Door Latch Access
 After=front_door_latch.service
 Requires=front_door_latch.service
 PartOf=front_door_latch.service
+BindsTo=front_door_latch.service
 
 [Service]
 Type=simple
