Revert "Correct ordering of systemd units to come up correctly on restart"
This reverts commit 26d24d3ee31a624f82c4fed1799d66eeda03b559.

--- a/systemd/front_door_rfid_reader.service
+++ b/systemd/front_door_rfid_reader.service
@@ -1,9 +1,9 @@
 [Unit]
 Description=RFID Reader for Front Door Latch Access
 After=front_door_authorizer.service
-# Requires=front_door_authorizer.service
-# PartOf=front_door_latch.service
-# BindsTo=front_door_latch.service
+Requires=front_door_authorizer.service
+PartOf=front_door_latch.service
+BindsTo=front_door_latch.service
 
 [Service]
 Type=simple
