--- a/systemd/front_door_authorizer.service
+++ b/systemd/front_door_authorizer.service
@@ -1,10 +1,9 @@
 [Unit]
 Description=RFID Authorizer for Front Door Latch Access
-Before=front_door_rfid_reader.service
 After=front_door_latch.service
-# Requires=front_door_latch.service
-# PartOf=front_door_latch.service
-# BindsTo=front_door_latch.service
+Requires=front_door_latch.service
+PartOf=front_door_latch.service
+BindsTo=front_door_latch.service
 
 [Service]
 Type=simple
