--- a/systemd/front_door_latch.service
+++ b/systemd/front_door_latch.service
@@ -9,6 +9,7 @@ LogNamespace=keep
 
 WorkingDirectory=/home/marcidy/100101SecBot
 RuntimeDirectory=queeriouslabs
+RuntimeDirectoryPreserve=yes
 Environment="QUEERIOUSLABS_ENV=PROD"
 ExecStart=/home/marcidy/venv/bin/python3 /home/marcidy/100101SecBot/relay.py
 Restart=always
