fix this branches systemd units

--- a/systemd/front_door_authorizer.service
+++ b/systemd/front_door_authorizer.service
@@ -1,15 +1,16 @@
 [Unit]
 Description=RFID Authorizer for Front Door Latch Access
+Before=front_door_rfid_reader.service
 After=front_door_latch.service
-Requires=front_door_latch.service
-PartOf=front_door_latch.service
-BindsTo=front_door_latch.service
+# Requires=front_door_latch.service
+# PartOf=front_door_latch.service
+# BindsTo=front_door_latch.service
 
 [Service]
 Type=simple
 
 LogNamespace=keep
-RuntimeDirectory=queeriouslabs
+# RuntimeDirectory=queeriouslabs
 WorkingDirectory=/home/marcidy/100101SecBot
 
 Environment="QUEERIOUSLABS_ENV=PROD"
